# 028_github_resp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
src/001_hello_world/: CMakeLists.txt  hello_world.cpp
src/002_template/: 001_test.cpp
src/002_template/include/: 001_test.hpp
src/tests/: CMakeLists.txt  unit_tests.cpp
